
Version 102/8:

 * (angle 0.0) is 0, and (angle -0.0) is pi. This is consistent with
   the distinction between 0.0+0i and 0.0+0.0i, and with the notion of
   0.0 as "infinitesimally small". Also, fixed (angle +nan.0).

Version 102/7:

 * Fixed interaction of `peek-char' and `file-position' (PR 1318).

 * Fixed `close-output-port' so that it flushes stream ports (stdout,
   stderr, and process ports).

 * Fixed `custodian-shutdown-all' to force-close a blocking output
   stream (unflushed data is lost).

 * Replaced 'generic-failure as a `detail' in `exn:i/o:filesystem'
   with #f. Could change to a list later, if there is still strong
   interest.

Version 102/6:

 [No changes]

Version 102/5:

 * `with-input-from-file' and `with-output-to-file' close the port
   when control leaves the dynamic extent of the call (either
   normally, through an exception, or through a general continuation
   jump).

 * Added a `detail' field to `exn:i/o:filesystem'. This is a
   compromise between the version 53 exn system, which was too
   detailed, and the version 101 system, which doesn't provide enough
   information (e.g., to implement `make-temporary-file').

   The value of the `detail' field is currently either
   'ill-formed-path, 'already-exists, 'wrong-version, or
   'generic-failure. This set may be expanded in the future, such that
   some generic failures turn into specific failures.

 * Changed output to stdout, stderr, and process ports to use
   non-blocking mode while actively writing only. This avoids clashes
   among Unix programs that use the same output device, because
   setting a descriptor to non-blocking sometimes means making the
   entire asscoaited device non-blocking (for all programs, for both
   input and output!).

 * Added `square' to functio.ss.

Version 102/4:

 * Fixed number reader to allow +inf.0, -inf.0, and +nan.0 in complex
   constants. For example, +inf.0-inf.0i is now a legal constant.  To